SET(AssimpSDL_SRCS
	main.cpp
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_EXECUTABLE(AssimpSDL ${AssimpSDL_SRCS})

target_link_libraries(
  AssimpSDL
  assimp
  ${SDL_LIBRARY}
  ${OPENGL_LIBRARY}
  ${GLEW_LIBRARY}
)

SET_TARGET_PROPERTIES(AssimpSDL PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS AssimpSDL RUNTIME DESTINATION ${PROJECT_BUILD_PATH})