SET(Jinja2Test_SRCS
	main.cpp
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Libs/Amaterasu3D
)

ADD_EXECUTABLE(Jinja2Test ${Jinja2Test_SRCS})

target_link_libraries(
  Jinja2Test
  Amaterasu3D
)

SET_TARGET_PROPERTIES(Jinja2Test PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS Jinja2Test RUNTIME DESTINATION ${PROJECT_BUILD_PATH})