SET(Jinja2_SRCS
	main.cpp
)

FIND_PACKAGE(PythonLibs)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${PYTHON_INCLUDE_DIRS}
)

ADD_EXECUTABLE(Jinja2 ${Jinja2_SRCS})

target_link_libraries(
  Jinja2
  ${PYTHON_LIBRARIES}
)

SET_TARGET_PROPERTIES(Jinja2 PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS Jinja2 RUNTIME DESTINATION ${PROJECT_BUILD_PATH})