SET(Jinja2_SRCS
	main.cpp
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Libs/Amaterasu3D
)

ADD_EXECUTABLE(Jinja2 ${Jinja2_SRCS})

target_link_libraries(
  Jinja2
  Amaterasu3D
)

SET_TARGET_PROPERTIES(Jinja2 PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS Jinja2 RUNTIME DESTINATION ${PROJECT_BUILD_PATH})