SET(NeheLesson1_SRCS
	main.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Libs/OpenGLPWM
)

ADD_EXECUTABLE(NeheLesson1 ${NeheLesson1_SRCS})

target_link_libraries(
  NeheLesson1
  ${OPENGL_LIBRARY}
)

SET_TARGET_PROPERTIES(NeheLesson1 PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS NeheLesson1 RUNTIME DESTINATION ${PROJECT_BUILD_PATH})