SET(OpenCL_SRCS
	main.cpp
)

FIND_PACKAGE(OPENCL)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Libs/Amaterasu3D
)

ADD_EXECUTABLE(OpenCLTest ${OpenCL_SRCS})

target_link_libraries(
  OpenCLTest
  ${OPENCL_LIBRARIES}
  Amaterasu3D
)

SET_TARGET_PROPERTIES(OpenCLTest PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS OpenCLTest RUNTIME DESTINATION ${PROJECT_BUILD_PATH})