SET(OpenGL3_SRCS
	main.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_EXECUTABLE(OpenGL3 ${OpenGL3_SRCS})

target_link_libraries(
  OpenGL3
  ${SFML_WINDOW_LIBRARY}
  ${GLEW_LIBRARY}
  ${OPENGL_LIBRARY}
)

SET_TARGET_PROPERTIES(OpenGL3 PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS OpenGL3 RUNTIME DESTINATION ${PROJECT_BUILD_PATH})